# personal-studies

domain-text-processing/: 2026-basics-docling.ipynb  2026-basics-pymupdf.ipynb  2026-basics-tesseract.ipynb  2026-pipeline-comparison.ipynb  docling_export.json  docling_export.md  pyproject.toml
domain-text-processing/.ipynb_checkpoints/: 2026-basics-pymupdf-checkpoint.ipynb  2026-basics-tesseract-checkpoint.ipynb
