[project]
name = "domain-text-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docling>=2.80.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pytesseract>=0.3.13",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]
